--- a/thousands/templates/climb_edit.html
+++ b/thousands/templates/climb_edit.html
@@ -1,7 +1,12 @@
 {% extends "layout.html" %}
 {% block title %}Отметить восхождение{% endblock %}
 {% block content %}
-<h2>Отметить восхождение</h2>
+<ol class="breadcrumb">
+    <li><a href="#">хребет {{ summit.ridge }}</a></li>
+    <li><a href="{{ url_for('summit', summit_id=summit.id, ridge_id=summit.ridge_id) }}">вершина  {{ summit.name }}</a></li>
+    <li class="active">Отметить восхождение</li>
+</ol>
+<h1>Отметить восхождение</h1>
 {% if form.errors %}
 <div id="form-errors" class="alert alert-danger">
     <ul id="form-error-list">
@@ -14,19 +19,7 @@
 </div>
 {% endif %}
 <form id="summit_edit_form" method="post" class="form-horizontal">
-  {{ form.summit_id(value=summit.id) }}
   {{ form.csrf_token }}
-  <div class="form-group">
-    <label class="col-md-3 control-label">Вершина</label>
-    <div class="col-md-6">
-      <p class="form-control-static">
-        <a  href="{{ url_for('summit', summit_id=summit.id) }}">
-            {% if summit.name %}{{ summit.format_name() }}, {% endif %}{{ summit.height }}, хребет {{ summit.ridge }}
-        </a>
-      </p>
-    </div>
-  </div>
-
   <div class="form-group">
     <label for="name_alt" class="col-md-3 control-label">Дата</label>
     <div class="col-md-6">
