--- a/thousands/templates/summit_edit.html
+++ b/thousands/templates/summit_edit.html
@@ -14,7 +14,6 @@
 </div>
 {% endif %}
 <form id="summit_edit_form" method="post" class="form-horizontal" enctype="multipart/form-data">
-  {{ form.id }}
   {{ form.csrf_token }}
   <div class="form-group">
     {{ form.name.label(class_='col-md-3 control-label') }}
@@ -61,7 +60,8 @@
   </div>
    <div class="form-group">
     <div class="col-md-offset-3 col-md-6">
-      <button type="submit" class="btn btn-default">Сохранить</button>
+      <button type="submit" class="btn btn-primary" name="action" value="update">Сохранить</button>
+      <button type="submit" class="btn btn-danger simple-delete-confirm" name="action" value="delete">Удалить</button>
     </div>
   </div>
 </form>
