Better image gallery

--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -45,9 +45,8 @@
   <link rel="stylesheet" href="/static/cropper.min.css" />
   <script src="/static/cropper.min.js"></script>
 
-  <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
-  <link rel="stylesheet" href="/static/bootstrap-image-gallery.min.css">
-  <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+  <link rel="stylesheet" href="/static/baguetteBox.min.css">
+  <script src="/static/baguetteBox.min.js" async></script>
 </head>
 
 <body>
