Use postgresql point type for coordinates field

--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -64,7 +64,7 @@
         {% endif %}
         <dl class="dl-horizontal">
             <dt>Координаты</dt>
-            <dd><a href="{{ url_for('index', sid=summit.id) }}#12/{{ summit.coordinates[0] }}/{{ summit.coordinates[1] }}">{{ summit.format_coordinates() }}</a></dd>
+            <dd><a href="{{ url_for('index', sid=summit.id) }}#12/{{ summit.coordinates.lat }}/{{ summit.coordinates.lng }}">{{ summit.coordinates.format() }}</a></dd>
         </dl>
         {% if summit.interpretation %}
         <dl class="dl-horizontal">
