--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -59,7 +59,7 @@
         </dl>
         {% if summit.main %}
         <dl class="dl-horizontal">
-            <dd>Главная (высочайшая) вершина хребта</dd>
+            <dd>Главная вершина хребта</dd>
         </dl>
         {% endif %}
         <dl class="dl-horizontal">
