--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -40,7 +40,7 @@
         {% else %}
             <img src="/static/mnt_dummy.png" class="img-responsive center-block summit-image-main">
         {% endif %}
-        <p>Есть фотография этой вершины? Можете <a href="">поделиться ей</a> с нашим проектом.</p>
+        <p class="text-center"><a href="">Добавить фотографию</a></p>
     </div>
     <div class="col-md-8">
         {% if summit.name_alt %}
@@ -59,7 +59,7 @@
         </dl>
         {% if summit.main %}
         <dl class="dl-horizontal">
-            <dd>Главная (высочайшая) вершина хребта</dd>
+            <dd>Главная вершина хребта</dd>
         </dl>
         {% endif %}
         <dl class="dl-horizontal">
