--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -15,7 +15,7 @@
 
 
   <title>{{ self.title() }}</title>
-
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
