--- a/thousands/templates/errorpage.html
+++ b/thousands/templates/errorpage.html
@@ -10,6 +10,7 @@
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 </head>
 
@@ -20,4 +21,3 @@
 </body>
 
 </html>
-
