--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -34,7 +34,7 @@
     <div class="col-md-6">
     {% if climbed | length == 0 %}
         {% if current_user == user %}
-            Вы еще не сообщили ни об одной посещенной вершине. Найти вершину, на которую вы взошли можно <a href="{{ url_for('index') }}">на карте</a> или <a href="{{ url_for('table') }}">в таблице</a>.
+            Вы еще не сообщили ни об одной посещенной вершине. Найти вершину, на которую вы взошли можно <a href="{{ url_for('index') }}">на карте</a> или <a href="{{ url_for('summits') }}">в таблице</a>.
         {% else %}
             Этот восходитель еще не сообщил ни об одной посещенной вершине.
         {% endif %}
