--- a/thousands/templates/ridge.html
+++ b/thousands/templates/ridge.html
@@ -11,10 +11,34 @@
 </div>
   {% endif %}
 {% endwith %}
-<ol class="breadcrumb">
-    <li><a href="{{ url_for('index') }}">Главная</a></li>
-    <li class="active">хребет {{ ridge.name }}</li>
-</ol>
-<h1>{{ ridge.name }}</h1>
-<p>{{ ridge.description }}</p>
+<h1>{{ ridge.type_ }} {{ ridge.name }}</h1>
+{% if ridge.panoram %}
+  <div>
+      <img src="{{ url_for('image_get', image_id=ridge.panoram) }}" alt="Панорама" class='img-responsive'>
+  </div>
+{% endif %}
+<div class="row">
+  <div class="col-md-6">
+    <div class="ridge-description">
+      {{ ridge.description | safe }}
+    </div>
+  </div>
+  <div class="col-md-6">
+    <h2>Вершины <small>(всего {{ridge.summits | length }})</small></h2>
+    <ul class="list-unstyled">
+    {% for s in ridge.summits %}
+        <li>
+          {% if s.main %}
+          <b><a href="{{ url_for('summit', ridge_id=ridge.id, summit_id=s.id) }}" title="Главная вершина хребта">{{s.format_name(height=True) }}</a></b>
+          {% else %}
+          <a href="{{ url_for('summit', ridge_id=ridge.id, summit_id=s.id) }}">{{s.format_name(height=True) }}</a>
+          {% endif %}
+          {% if s.has_image %}
+              <span class="glyphicon glyphicon-camera" aria-hidden="true" title="Есть фотографии"></span>
+          {% endif %}
+        </li>
+    {% endfor %}
+    </ul>
+  </div>
+</div>
 {% endblock %}
