Fixed baguetteBox init

--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -133,6 +133,8 @@
     </div>
 </div>
 <script>
-baguetteBox.run('#summit-images');
+window.onload = function () {
+    baguetteBox.run('#summit-images');
+}
 </script>
 {% endblock %}
