--- a/thousands/templates/map.html
+++ b/thousands/templates/map.html
@@ -16,7 +16,7 @@
 <div id="map"></div>
 <script>
   {% if hl_summit != None %}
-  hl_summit = {{ hl_summit }};
+  hl_summit = '{{ hl_summit }}';
   {% endif %}
   popup_toopen = undefined;
   document.body.onload = createMainMap;
