--- a/thousands/templates/menu.html
+++ b/thousands/templates/menu.html
@@ -6,7 +6,7 @@
 <li {%  if active_page == 'top' %} class="active"{% endif %}><a href="{{ url_for('top') }}">Восходители</a></li>
 <li {%  if active_page == 'about' %} class="active"{% endif %}><a href="{{ url_for('about') }}">О проекте</a></li>
   {% if not current_user.is_authenticated %}
-  <li><a href="/login?r={{ request.path }}" data-remote="false" data-toggle="modal" data-target="#authModal">Вход</a>
+  <li><a href="/login?next={{ request.path }}" data-remote="false" data-toggle="modal" data-target="#authModal">Вход</a>
   {% else %}
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ current_user.name }}<span class="caret"></span></a>
